# raicommon

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  bitbucket-pipelines.yml  install.sh  package.xml  raiCommonConfig.cmake.in  raicommonConfig.cmake.in
.ci/: build.sh
.ci/docker/: Dockerfile
cmake/: raiCommonConfig.cmake.in  raicommonConfig.cmake.in
include/raiCommon/: rai_utils.hpp
include/raiCommon/math/: GoldenSectionMethod.hpp  RAI_math.hpp
include/raiCommon/utils/: RandomNumberGenerator.hpp  StopWatch.hpp
include/raiCommon/utils/rai_graph/: gnuplotFigureManager.hpp  gnuplot_cpp.hpp
include/raiCommon/utils/rai_logger/: RAI_data.hpp  RAI_logger.hpp
include/raiCommon/utils/rai_message_logger/: rai_message.hpp  rai_message_logger.hpp
include/raiCommon/utils/rai_timer/: RAI_timer.hpp  RAI_timer_items.hpp
src/examples/: logging_examples.cpp  plotting_examples.cpp
src/utils/rai_graph/: gnuplotter.cpp  plotting_examples.cpp
src/utils/rai_logger/: RAI_logger.cpp
src/utils/rai_message_logger/: rai_message_logger.cpp
src/utils/rai_timer/: RAI_timer.cpp
test/: loggerTest.cpp  test_logger.cpp
